--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="icon" href="favicon.ico" />
-  <meta name="description" content="Sanyam Kumar - Software Engineer. Personal Website."
+  <meta name="description" content="Suriya Rajan - Data Engineer. Personal Website."
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
